# logos

./: .env.example  LICENSE  README.md
logos-I/: .env.example  README.md
logos-frontend/: .taskmasterconfig  CHAT_PERSISTENCE_FEATURE.md  README.md  design_system.md  middleware.ts  package-lock.json  package.json  tailwind.config.js
logos-frontend/.roo/rules/: dev_workflow.md
logos-frontend/.taskmaster/: state.json
logos-frontend/.taskmaster/docs/: prd.txt
logos-frontend/scripts/: PRD.txt  task-complexity-report.json
logos-frontend/src/app/: globals.css  layout.tsx  page.tsx
logos-frontend/src/components/: IntegrationsSlider.tsx
logos-frontend/src/config/: integrations.tsx
logos-frontend/src/contexts/: AgentContext.tsx
logos-frontend/src/lib/: animations.ts  auth.ts  db.ts  hooks.ts  tools.ts  utils.ts
logos-frontend/src/services/: tokenService.ts
logos-frontend/src/types/: agent.ts  chat-persistence.ts  integrations.ts  supabase.ts
logos-frontend/src/utils/: agent.ts  chat-persistence.ts  cron.ts  encryption.ts  schedule.ts  string.ts
logos-frontend/supabase/: config.toml
logos-frontend/supabase/migrations/: 20250504134824_remote_schema.sql  20250504135041_storage.sql  20250524000001_fix_trigger_type.sql  20250524225330_remote_schema.sql  20250525000001_create_beta_submissions.sql  20250620015603_chat_persistence_schema.sql
logos-sandbox/: .env.example  README.md  agent.py  client.py  logging_config.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py  workflow_runner.py  workflow_tests.py
(+66 files in other folders)
